--- a/src/app.css
+++ b/src/app.css
@@ -343,6 +343,7 @@ html {
 
 .form-title {
   color: #202124;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 24px;
   font-weight: 400;
   margin: 0 0 20px 0;
